--- a/menu.html
+++ b/menu.html
@@ -53,6 +53,7 @@
             border-radius: 10px;
         }
         .pdf-container p {
+            direction: rtl;
             text-align: center;
             margin-top: 20px;
             font-size: 16px;
@@ -100,4 +101,5 @@
 </html>
 
 </html>
+
 
